[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/interface/GUI.gd" type="Script" id=1]
[ext_resource path="res://ui/interface/left.png" type="Texture" id=2]
[ext_resource path="res://ui/interface/left_pressed.png" type="Texture" id=3]
[ext_resource path="res://ui/interface/right.png" type="Texture" id=4]
[ext_resource path="res://ui/interface/right_pressed.png" type="Texture" id=5]
[ext_resource path="res://ui/interface/stats/select.png" type="Texture" id=6]
[ext_resource path="res://ui/interface/stats/select_pressed.png" type="Texture" id=7]

[sub_resource type="InputEventKey" id=1]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = true
scancode = 65
unicode = 0
echo = false

[sub_resource type="ShortCut" id=2]

shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = false
scancode = 68
unicode = 0
echo = false

[sub_resource type="ShortCut" id=4]

shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]

device = 0
alt = false
shift = false
control = false
meta = false
command = false
pressed = false
scancode = 32
unicode = 0
echo = false

[sub_resource type="ShortCut" id=6]

shortcut = SubResource( 5 )

[node name="GUI" type="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="CharacterSelector" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 720.0
rect_min_size = Vector2( 400, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 40
alignment = 1
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelector" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 226.0
margin_right = 400.0
margin_bottom = 326.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="Previous" type="TextureButton" parent="CharacterSelector/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 170.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 2 )
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect" ]

[node name="SelectedCharacter" type="TextureRect" parent="CharacterSelector/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_right = 200.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true
stretch_mode = 6
_sections_unfolded = [ "Grow Direction", "Rect" ]

[node name="Next" type="TextureButton" parent="CharacterSelector/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 230.0
margin_right = 330.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 4 )
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Hint", "Size Flags", "Textures" ]

[node name="Select" type="TextureButton" parent="CharacterSelector" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 366.0
margin_right = 400.0
margin_bottom = 494.0
rect_min_size = Vector2( 256, 128 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = SubResource( 6 )
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 404.0
margin_top = 353.0
margin_right = 609.0
margin_bottom = 367.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "No button has been pressed yet"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="CharacterSelector/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]

[connection signal="pressed" from="CharacterSelector/HBoxContainer/Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="CharacterSelector/Select" to="." method="_on_Select_pressed"]


